--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -381,3 +381,9 @@ add_custom_target(submit-p4
 )
 
 add_dependencies(check-clang-tidy gtest bustub) # needs gtest headers, compile_commands.json
+
+
+
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
+SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
